--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,10 +26,11 @@
     "@repo/ui": "workspace:*",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-devtools": "^5.91.1",
+    "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.555.0",
-    "next": "16.0.10",
+    "next": "^16.0.6",
     "next-auth": "^4.24.13",
     "next-intl": "^4.5.8",
     "next-themes": "^0.4.6",
@@ -38,6 +39,7 @@
     "react-hook-form": "^7.67.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.4.0",
     "zod": "^4.1.13",
     "zustand": "^5.0.9"
   },
